<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/sign_up_here"
        android:textSize="25sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:gravity="center"
        android:text="@string/fill_all_details_correctly"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/name"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/get_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/enter_your_name"/>

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/get_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/passwordd"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/get_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="13dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/write_something_about_yourself"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/get_something"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="13dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/please_write_here"
        android:inputType="textMultiLine"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_gender"
        android:textSize="16sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:text="@string/male"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interested_courses"
        android:textSize="16sp" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:orientation="horizontal">

    <CheckBox
        android:id="@+id/java"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/java"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/kotlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/kotlin"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/python"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/python"
        android:textSize="16sp" />
</LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
          android:id="@+id/submit_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dp"
          android:padding="10dp"
          android:layout_weight="3"
          android:text="@string/sign_up"
          android:textSize="20sp" />

      <Button
          android:id="@+id/clear_btn"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/clear"
          android:textSize="20sp" />


  </LinearLayout>

</LinearLayout>